name:                haskellsandboxserver
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskellsandboxserver#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/db
                     , src/db/queries
                     , src/api
                     , src/api/v1/public
                     , src/api/v1/private
  exposed-modules:     API.V1
                     , DB.Schema
                     , DB.Queries.User
                     , DB.Config
                     , API.V1.Public.SessionTokens
  build-depends:       base >= 4.7 && < 5
                     , time
                     , servant-server
                     , aeson
                     , persistent >= 2.6
                     , persistent-template
                     , persistent-postgresql
                     , mtl
                     , monad-logger
                     , transformers
                     , bytestring
                     , wai
                     , wai-extra
                     , bcrypt
                     , validation
  default-language:    Haskell2010

executable haskellsandboxserver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellsandboxserver
                     , servant-server
                     , safe
                     , persistent-postgresql
                     , mtl
                     , wai
                     , warp
  default-language:    Haskell2010

executable haskellsandboxserver-migrate
  hs-source-dirs:      app
  main-is:             Migrate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellsandboxserver
                     , persistent >= 2.6
                     , persistent-template
                     , persistent-postgresql
                     , mtl
                     , monad-logger
  default-language:    Haskell2010

test-suite haskellsandboxserver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellsandboxserver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskellsandboxserver
